<resources>
    <string name="app_name">Owners Manual</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="contact">Contact</string>
    <string name="exit">Exit</string>
    <string name="communicate">Communicate</string>
    <string name="developerName">Ajith Kumar K</string>
    <string name="developerPlace">Tamilnadu, india</string>
    <string name="developerEmail">ajithpoison@gmail.com</string>
    <string name="eMail">Email</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>

    <!-- Social Media -->
    <string name="instagramMail">\@AjithPoison</string>
    <string name="twitterMail">\@AjithPoison</string>
    <string name="facebookURL">facebook.com/ajithdauk</string>

    <string name="title_activity_chap1">ACTIVA 5G</string>
    <string name="title_activity_chap2">ACTIVA 125</string>
    <string name="title_activity_chap3">ACTIVA i</string>
    <string name="title_activity_chap4">AVIATOR</string>
    <string name="title_activity_chap5">CB300R</string>
    <string name="title_activity_chap6">CB HORNET</string>
    <string name="title_activity_chap7">CB SHINE</string>
    <string name="title_activity_chap8">CB SHINE SP</string>
    <string name="title_activity_chap9">CB UNICORN 150</string>
    <string name="title_activity_chap10">CB UNICORN 160</string>
    <string name="title_activity_chap11">CBR250R</string>
    <string name="title_activity_chap12">CD110</string>
    <string name="title_activity_chap13">CLIQ</string>
    <string name="title_activity_chap14">DIO</string>
    <string name="title_activity_chap15">DREAM NEO</string>
    <string name="title_activity_chap16">DREAM YUGA</string>
    <string name="title_activity_chap17">GRAZIA</string>
    <string name="title_activity_chap18">LIVO</string>
    <string name="title_activity_chap19">NAVI</string>
    <string name="title_activity_chap20">XBLADE</string>
</resources>
