<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_border">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_user" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/developerName"
                android:textColor="@color/white"
                android:textSize="32sp" />


            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/developerPlace"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rellay1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/callme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/followersBg"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_call" />

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/favorites_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linlay1"
            android:background="@drawable/grad"
            android:columnCount="2"
            android:padding="10dp"
            android:rowCount="4">

            <ImageButton
                android:id="@+id/emailButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@drawable/gmail" />

            <LinearLayout
                android:id="@+id/onEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:orientation="vertical"
                android:paddingTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eMail"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/onEmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/developerEmail"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/instagramButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@drawable/instagram" />

            <LinearLayout
                android:id="@+id/onInsta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/onInstaTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/twitterMail"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/facebookButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@drawable/facebook" />

            <LinearLayout
                android:id="@+id/onFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/onFacebookTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/facebookURL"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/twitterButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="10dp"
                android:background="@drawable/twitter" />

            <LinearLayout
                android:id="@+id/onTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:textColor="@color/headings"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/onTwitterTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/instagramMail"
                    android:textColor="@color/grey"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>
        </GridLayout>
    </RelativeLayout>
</ScrollView>
